# langchain-rag-pipeline

./: .gitignore  Pipfile  README.md  context.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
src/: __init__.py  app.py  config.py  data.py  embed.py  ingestion.py  main.py  model.py  rag_system.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  embeddings.py  llm.py
src/ingestion/: __init__.py  loader.py
src/rag/: __init__.py  chain.py
src/storage/: __init__.py  vectorstore.py
tests/: conftest.py  test_rag_pipeline.py
